--- a/homestyle.css
+++ b/homestyle.css
@@ -30,3 +30,51 @@ border:none ;
   display: inline-block;
   width: 80% ;
 }
+
+/*nav*/
+nav{
+    width: 100%;
+    margin: 0px auto 40px auto;
+    background-color: #100F0F;
+    position: sticky;
+    top: 0px;
+}
+
+nav ul{
+    list-style-type: none;
+}
+
+nav li{
+    float: left;
+    width: 25%;
+    text-align: center;
+}
+
+nav ul::after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+nav a{
+    display: list-item;
+    text-decoration: none;
+    color: white;
+    border-bottom: 2px solid transparent;
+    padding: 10px 0px;
+}
+
+nav a:hover{
+    color: white;
+    border-bottom: 2px solid gold;
+transition: all 0.2s ease-out;
+width: 100% ;
+}
+
+  
+}
+
+.conteneur{
+  margin: 0px 20px;
+  height: 1500px;
+}
